# Scrapper-for-ecom

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  pyproject.toml
config/: navigation_agent_config.yaml  parsing_agent_config.yaml  system_config.yaml
data/proxies/: proxylist.json  valid_proxieshttp.txt
data/results_scrapper/: climbing.html  crawl_results_1750455528.jl  main_site.html  meli_robots.txt  robots.txt  robots_analysis_1750449786.jl  sitemap.xml  sitemap_1750449792.xml  test_crawl.txt
src/ecom_scrapper/: utils.py
src/ecom_scrapper/crawler/: README.md  advertools_crawler.py  crawler.py
src/ecom_scrapper/inspection/: inspection.py
src/ecom_scrapper/parsing/: README.md  html_parsing.py  parsing_sites.py
src/ecom_scrapper/proxy_verification/: README.md  proxy_verification.py
